<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Fragments.LeetcodeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aleo"
                android:text="@string/username1"
                android:textColor="#787878"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/totalSolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_solved_problem"
                android:fontFamily="@font/aleo"
                android:textSize="18sp"
                android:textColor="#787878"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/reputation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reputation"
                android:fontFamily="@font/aleo"
                android:textSize="18sp"
                android:textColor="#787878"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/contributionPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textColor="#787878"
                android:fontFamily="@font/aleo"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textColor="#787878"
                android:fontFamily="@font/aleo"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/easySolved"
                android:textColor="#52AF9B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aleo"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                />

                <TextView
                    android:id="@+id/easyAccepptanceRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aleo"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="#1E1E1E"
                    android:layout_marginTop="8dp"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textColor="#787878"
                    android:fontFamily="@font/aleo"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/mediumSolved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aleo"
                    android:layout_gravity="center"
                    android:textColor="#FFCA31"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/mediumAccepptanceRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aleo"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="#1E1E1E"
                    android:layout_marginTop="8dp"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textColor="#787878"

                android:fontFamily="@font/aleo"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/hardSolved"
                android:textColor="#D0011B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aleo"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/hardAccepptanceRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aleo"
                android:layout_gravity="center"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/infoForUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/butcherman"
                android:layout_marginTop="25dp"
                android:visibility="invisible"
                android:textColor="#535353"
                android:text="@string/more_features_update_soon"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>